Use `key` to set default keybinding across platforms

--- a/package.json
+++ b/package.json
@@ -397,9 +397,8 @@
 		"keybindings": [
 			{
 				"command": "sourcery.chat.ask",
-				"linux": "ctrl+shift+y",
+				"key": "ctrl+shift+y",
 				"mac": "cmd+y",
-				"windows": "ctrl+shift+y",
 				"when": "editorTextFocus"
 			}
 		]
