--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -7,6 +7,10 @@ on:
         description: 'Version to release'
         required: true
 
+permissions:
+  contents: read
+  actions: read
+
 jobs:
   publish-vsix:
     runs-on: ubuntu-latest
