chore: rename chat from coding assistant -> Sourcery

--- a/package.json
+++ b/package.json
@@ -53,10 +53,10 @@
 			"sourcery-explorer": [
 				{
 					"id": "sourcery.chat",
-					"name": "Coding Assistant",
+					"name": "Sourcery",
 					"type": "webview",
 					"icon": "sourcery-icon.png",
-					"contextualTitle": "Coding Assistant"
+					"contextualTitle": "Sourcery"
 				},
 				{
 					"id": "sourcery.rules",
