try to unzip the artifacts

--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -55,7 +55,7 @@ jobs:
       run: mv sourcery-*.vsix sourcery-${{ github.event.inputs.version }}-${{ matrix.target }}.vsix
 
     - name: Upload archive
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         path: sourcery-${{ github.event.inputs.version }}-${{ matrix.target }}.vsix
         name: sourcery-${{ github.event.inputs.version }}-${{ matrix.target }}.vsix
@@ -69,6 +69,15 @@ jobs:
       uses: actions/download-artifact@v4
       with:
         merge-multiple: true
+        path: zipped-artifacts
+
+    - name: Unzip artifacts
+      run: |
+        cd zipped-artifacts
+        for f in *.zip; do
+          unzip "$f"
+        done
+        cd ..
 
     - name: Create release
       uses: ncipollo/release-action@v1
@@ -77,7 +86,7 @@ jobs:
         name: Sourcery ${{ github.event.inputs.version }}
         body: v${{ github.event.inputs.version }}
         prerelease: true
-        artifacts: '*.vsix'
+        artifacts: 'zipped-artifacts/*.vsix'
         artifactContentType: raw
         artifactErrorsFailBuild: true
         token: ${{ secrets.SOURCERY_RELEASE_TOKEN }}
