--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -57,8 +57,8 @@ jobs:
     - name: Upload archive
       uses: actions/upload-artifact@v4
       with:
-        path: sourcery-${{ github.event.inputs.version }}-${{ matrix.target }}.vsix
-        name: sourcery-${{ github.event.inputs.version }}-${{ matrix.target }}.vsix
+        path: *.vsix
+        name: sourcery-${{ github.event.inputs.version }}-${{ matrix.target }}
 
   release:
     needs: package-vsix
