--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -52,8 +52,8 @@ jobs:
         rm -rf sourcery_binaries/install/*
         mv downloaded_binaries/${{matrix.platform}}-${{matrix.arch}} sourcery_binaries/install/${{matrix.platform}}
 
- #   - name: Update version number
- #     run: yarn run bump ${{ github.event.inputs.version }}
+    - name: Update version number
+      run: yarn run bump ${{ github.event.inputs.version }}
 
     - name: Package VSCode extension
       run: yarn run vsce package --target ${{matrix.target}}
@@ -83,19 +83,19 @@ jobs:
 
     - run: yarn install --frozen-lockfile
 
-  #  - name: Update version number
-  #    run: yarn run bump ${{ github.event.inputs.version }}
+    - name: Update version number
+      run: yarn run bump ${{ github.event.inputs.version }}
 
-  #  - name: Commit to main, create tag, and push
-  #    run: |
-  #      git add .
-  #      git config --global user.name ${{ github.actor }}
-  #      git config --global user.email ${{ github.actor }}@users.noreply.github.com
-  #      git commit -m 'Update version number to v${{ github.event.inputs.version }}'
-  #      git tag v${{ github.event.inputs.version }}
-  #      git push origin main v${{ github.event.inputs.version }}
-  #    env:
-  #      GITHUB_TOKEN: ${{ secrets.SOURCERY_RELEASE_TOKEN }}
+    - name: Commit to main, create tag, and push
+      run: |
+        git add .
+        git config --global user.name ${{ github.actor }}
+        git config --global user.email ${{ github.actor }}@users.noreply.github.com
+        git commit -m 'Update version number to v${{ github.event.inputs.version }}'
+        git tag v${{ github.event.inputs.version }}
+        git push origin main v${{ github.event.inputs.version }}
+      env:
+        GITHUB_TOKEN: ${{ secrets.SOURCERY_RELEASE_TOKEN }}
 
     - name: Download artifacts
       uses: actions/download-artifact@v4
@@ -104,39 +104,38 @@ jobs:
         path: artifacts
 
     # TODO: Make this release not pre-release once tested.
-    - name: Debug - List VSIX files
-      run: find . -iname *.vsix -ls
 
- #   - name: Package and publish VSCode extension
- #     run: |
- #       yarn run vsce publish --packagePath $(find . -iname *.vsix) -p ${{ secrets.VSCE_TOKEN }} --pre-release
+
+    - name: Package and publish VSCode extension
+      run: |
+        yarn run vsce publish --packagePath $(find . -iname *.vsix) -p ${{ secrets.VSCE_TOKEN }} --pre-release
 
     # TODO: Make this release not pre-release once tested.
- #   - name: Create release
- #     uses: ncipollo/release-action@v1
- #     with:
- #       tag: v${{ github.event.inputs.version }}
- #       name: Sourcery ${{ github.event.inputs.version }}
- #       body: v${{ github.event.inputs.version }}
- #       prerelease: true
- #       artifacts: 'artifacts/*.vsix'
- #       artifactContentType: raw
- #       artifactErrorsFailBuild: true
- #       token: ${{ secrets.SOURCERY_RELEASE_TOKEN }}
+    - name: Create release
+      uses: ncipollo/release-action@v1
+      with:
+        tag: v${{ github.event.inputs.version }}
+        name: Sourcery ${{ github.event.inputs.version }}
+        body: v${{ github.event.inputs.version }}
+        prerelease: true
+        artifacts: 'artifacts/*.vsix'
+        artifactContentType: raw
+        artifactErrorsFailBuild: true
+        token: ${{ secrets.SOURCERY_RELEASE_TOKEN }}
 
- #   - name: Update version number to dev
- #     run: |
- #       yarn run bump prepatch --preid dev
- #       git commit -am 'Bump version to dev'
- #       git push origin main
- #     env:
- #       GITHUB_TOKEN: ${{ secrets.SOURCERY_RELEASE_TOKEN }}
+    - name: Update version number to dev
+      run: |
+        yarn run bump prepatch --preid dev
+        git commit -am 'Bump version to dev'
+        git push origin main
+      env:
+        GITHUB_TOKEN: ${{ secrets.SOURCERY_RELEASE_TOKEN }}
 
- #   - name: Notify Slack
- #     uses: 8398a7/action-slack@v3
- #     with:
- #       status: ${{ job.status }}
- #       text: Publish VS Code extension v${{ github.event.inputs.version }} - ${{ job.status }}
- #     env:
- #       SLACK_WEBHOOK_URL: ${{ secrets.SLACK_RELEASES_WEBHOOK_URL }}
- #     if: always()
+    - name: Notify Slack
+      uses: 8398a7/action-slack@v3
+      with:
+        status: ${{ job.status }}
+        text: Publish VS Code extension v${{ github.event.inputs.version }} - ${{ job.status }}
+      env:
+        SLACK_WEBHOOK_URL: ${{ secrets.SLACK_RELEASES_WEBHOOK_URL }}
+      if: always()
