--- a/package.json
+++ b/package.json
@@ -368,10 +368,10 @@
 					"default": true,
 					"description": "Show code lens for Sourcery's coding assistant."
 				},
-				"sourcery.lintingFixes": {
+				"sourcery.suggestAIFixes": {
 					"type": "boolean",
 					"default": true,
-					"description": "Show linting fixes for all problems."
+					"description": "Suggest AI fixes for all problems."
 				},
 				"sourcery.ruleType.refactorings": {
 					"type": "boolean",
