--- a/package.json
+++ b/package.json
@@ -368,7 +368,7 @@
 					"default": true,
 					"description": "Show code lens for Sourcery's coding assistant."
 				},
-				"sourcery.suggestAIFixes": {
+				"sourcery.suggestFixes": {
 					"type": "boolean",
 					"default": true,
 					"description": "Suggest AI fixes for all problems."
