--- a/package.json
+++ b/package.json
@@ -156,7 +156,7 @@
 			},
 			{
 				"command": "sourcery.hub.start",
-				"title": "Open Sourcery Hub",
+				"title": "Open Sourcery Analytics",
 				"category": "Sourcery"
 			},
 			{
