chore: publish all vsix packages (#272)
Update publish workflow to publish all VSIX packages to both VSCE and
Open VSX registries by specifying the package path and reusing the VSCE
token

CI:
- Add --packagePath flag to ovsx publish command to include all VSIX packages

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -107,7 +107,7 @@ jobs:
     - name: Package and publish VSCode extension
       run: |
         yarn run vsce publish --packagePath $(find . -iname *.vsix) -p ${{ secrets.VSCE_TOKEN }}
-        yarn run ovsx publish -p ${{ secrets.OPEN_VSX_TOKEN }}
+        yarn run ovsx publish --packagePath $(find . -iname *.vsix) -p ${{ secrets.OPEN_VSX_TOKEN }}
 
     - name: Create release
       uses: ncipollo/release-action@v1
