--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"url": "https://github.com/sourcery-ai/public/issues"
 	},
 	"license": "MIT",
-	"version": "1.41.1",
+	"version": "1.41.2-dev.1",
 	"publisher": "sourcery",
 	"icon": "sourcery-icon.png",
 	"keywords": [
