--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -7,6 +7,10 @@ on:
         description: 'Version to release'
         required: true
 
+permissions:
+  contents: read
+  actions: read
+
 jobs:
   package-vsix:
     strategy:
@@ -47,6 +51,9 @@ jobs:
         mkdir -p sourcery_binaries/install
         rm -rf sourcery_binaries/install/*
         mv downloaded_binaries/${{matrix.platform}}-${{matrix.arch}} sourcery_binaries/install/${{matrix.platform}}
+
+    - name: Update version number
+      run: yarn run bump ${{ github.event.inputs.version }}
 
     - name: Package VSCode extension
       run: yarn run vsce package --target ${{matrix.target}}
