feat: add Intel Mac (x86_64) support (#274)
## Summary
- Update CI matrix to use `mac-arm64`/`mac-x86_64` directory names
- Update `executable.ts` to detect architecture via `process.arch`
- Update `download-binaries.sh` directory names

This change is needed to support Intel Mac users and align with the updater's new directory structure. Companion PRs in intellij-plugin and core.

## Summary by Sourcery

Add architecture-specific macOS support by splitting mac binaries and
directory names into separate arm64 and x86_64 variants and wiring
selection into the executable path resolution.

New Features:
- Support separate Intel (x86_64) and Apple Silicon (arm64) macOS binaries in the packaged artifacts.

Enhancements:
- Update executable path resolution to choose the correct macOS binary based on process architecture.
- Align local binary download and installation directory layout with the new macOS architecture-specific structure.

CI:
- Adjust prerelease and publish GitHub Actions matrices to use distinct mac-arm64 and mac-x86_64 platforms.

--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -16,22 +16,14 @@ jobs:
     strategy:
       matrix:
         include:
-          - os: windows-latest
-            platform: win
-            arch: x64
-            target: win32-x64
-          - os: ubuntu-latest
-            platform: linux
-            arch: x64
-            target: linux-x64
-          - os: macos-latest
-            platform: mac
-            arch: x64
-            target: darwin-x64
-          - os: macos-latest
-            platform: mac
-            arch: arm64
-            target: darwin-arm64
+          - target: win32-x64
+            dir: win
+          - target: linux-x64
+            dir: linux
+          - target: darwin-x64
+            dir: mac-x86_64
+          - target: darwin-arm64
+            dir: mac-arm64
     runs-on: ubuntu-latest
 
     steps:
@@ -59,8 +51,7 @@ jobs:
       run: |
         ./download-binaries.sh ${{ github.event.inputs.version }}
         mkdir -p sourcery_binaries/install
-        rm -rf sourcery_binaries/install/*
-        mv downloaded_binaries/${{matrix.platform}}-${{matrix.arch}} sourcery_binaries/install/${{matrix.platform}}
+        mv downloaded_binaries/${{matrix.dir}} sourcery_binaries/install/
 
     - name: Update version number
       run: |
